<resources>
    <string name="app_name">Game Scorer</string>
    <string name="default_notification_channel_id">game_scorer_CH_01</string>
    <string name="facebook_app_id">208960752990232</string>
    <string name="fb_login_protocol_scheme">fb208960752990232</string>

    <string name="signing_you_in">Trying to sign you in. Please wait…</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="login_with">Login with</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_connect_with">Or connect with</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="username_empty_warning">Username cannot be empty!</string>
    <string name="password_empty_warning">Password cannot be empty!</string>
    <string name="error">Error</string>
    <string name="dismiss">Dismiss</string>
    <string name="error_signing_in_try_again">An error occurred when signing in! Try again later.</string>
</resources>
